--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -78,8 +78,10 @@
         position: relative;
         z-index: 2;
         picture{
+
         width: 80%;
         border-radius: 3rem;
+        transform: rotate(35deg);
         }
     }
     
